<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orderBy" />

    <RadioGroup
        android:id="@+id/orderByGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/orderByNewest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newest" />

        <RadioButton
            android:id="@+id/orderByStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startDate" />

        <RadioButton
            android:id="@+id/orderByEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endDate" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority" />

    <RadioGroup
        android:id="@+id/priorityGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/priorityLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low" />

        <RadioButton
            android:id="@+id/priorityMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/priorityHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high" />

        <RadioButton
            android:id="@+id/priorityAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all" />
    </RadioGroup>

    <Button
        android:id="@+id/applyFiltersButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply_filters" />
</LinearLayout>
