<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <!-- Title -->
    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:autofillHints=""
        android:hint="@string/title"
        android:inputType="text"
        android:minHeight="48dp" />

    <!-- Description -->
    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextTitle"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:minHeight="48dp" />

    <!-- Priority -->
    <Spinner
        android:id="@+id/spinnerPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextDescription"
        android:layout_marginTop="8dp"
        android:minHeight="48dp" />

    <!-- Start Date Picker -->
    <Button
        android:id="@+id/buttonStartDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_start_date"
        android:layout_below="@id/spinnerPriority"
        android:layout_marginTop="8dp" />

    <!-- End Date Picker -->
    <Button
        android:id="@+id/buttonEndDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_end_date"
        android:layout_below="@id/buttonStartDatePicker" />

    <!-- Color Picker -->
    <Button
        android:id="@+id/buttonColorPicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_color"
        android:layout_below="@id/buttonEndDatePicker" />

    <!-- Bottom Bar -->
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <!-- Archive Button -->
        <Button
            android:id="@+id/buttonArchive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginEnd="8dp"
            android:text="@string/archive" />

        <!-- Update Button -->
        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginEnd="8dp"
            android:text="@string/update" />

        <!-- Delete Button -->
        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/delete" />
    </LinearLayout>
</RelativeLayout>