<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/title"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/description"
        android:inputType="textMultiLine" />

    <!-- Color Picker -->
    <Button
        android:id="@+id/buttonColorPicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_color" />

    <!-- Add Task Button -->
    <Button
        android:id="@+id/buttonAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_task" />

</LinearLayout>
